--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-<title>Whale Intel & Trade Hub</title>
+
+<title>Whale Intel</title>
 
 <style>
 :root{
 --bg:#0f172a;
---glass:rgba(30,41,59,.7);
+--card:rgba(30,41,59,.75);
 --nav:rgba(15,23,42,.95);
 --blue:#3b82f6;
 --green:#10b981;
@@ -18,58 +19,65 @@
 --muted:#94a3b8;
 }
 
+*{box-sizing:border-box}
+
 body{
 margin:0;
 font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
-background:radial-gradient(circle at 50% 0%,#1e293b,#0f172a 70%);
+background:radial-gradient(circle at top,#1e293b,#0f172a 70%);
 color:var(--text);
-padding-bottom:80px;
+padding-bottom:78px;
 -webkit-user-select:none;
 user-select:none;
 }
 
-.app{max-width:500px;margin:auto;padding:16px}
+.app{
+max-width:500px;
+margin:auto;
+padding:14px;
+}
 
+/* Cards */
 .card{
-background:var(--glass);
-backdrop-filter:blur(12px);
+background:var(--card);
 border-radius:16px;
 padding:16px;
 margin-bottom:14px;
-border:1px solid rgba(255,255,255,.08)
+border:1px solid rgba(255,255,255,.08);
+backdrop-filter:blur(12px);
 }
 
-h2{margin:0 0 8px;font-size:18px}
-p{font-size:13px;color:#cbd5e1;margin:6px 0}
+h2{margin:0 0 6px;font-size:18px}
+p{margin:6px 0;font-size:13px;color:#cbd5e1}
 
+/* Badges */
 .badge{
 font-size:10px;
 padding:4px 8px;
 border-radius:6px;
 border:1px solid var(--muted);
-color:var(--muted)
+color:var(--muted);
 }
 .badge.pro{border-color:var(--green);color:var(--green)}
 
-.progress{height:8px;border-radius:6px;background:#020617;overflow:hidden}
-.fill{height:100%;width:60%;background:linear-gradient(90deg,var(--blue),var(--green))}
-
+/* Tabs */
 .tab{display:none}
 .tab.active{display:block;animation:fade .25s}
 @keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1}}
 
+/* Signals */
 .signal{
 background:rgba(255,255,255,.04);
 border-radius:14px;
 padding:14px;
 margin-bottom:12px;
-cursor:pointer
+cursor:pointer;
 }
 .signal.open .hidden{display:block}
-.hidden{display:none;font-size:12px;margin-top:8px}
 
 .row{display:flex;justify-content:space-between;align-items:center}
-.tag{font-size:11px}
+.hidden{display:none;font-size:12px;margin-top:8px}
+
 .long{color:var(--green)}
 .short{color:var(--red)}
 
@@ -78,35 +86,42 @@ filter:blur(6px);
 opacity:.6;
 padding:2px 6px;
 background:rgba(255,255,255,.1);
-border-radius:4px
+border-radius:4px;
 }
 
+/* Buttons */
 .btn{
 display:block;
 width:100%;
-text-align:center;
-padding:12px;
+padding:11px;
 border-radius:10px;
+text-align:center;
 font-weight:700;
-margin-top:10px;
 text-decoration:none;
 border:none;
-cursor:pointer
+margin-top:8px;
 }
 .binance{background:#F3BA2F;color:#000}
 .bybit{background:#181818;color:#fff;border:1px solid #333}
 .gray{background:#334155;color:#fff}
 
+/* Bottom Nav */
 .nav{
-position:fixed;bottom:0;left:0;right:0;
+position:fixed;
+bottom:0;left:0;right:0;
 background:var(--nav);
 display:flex;
 justify-content:space-around;
 padding:10px 0;
-border-top:1px solid rgba(255,255,255,.1)
+border-top:1px solid rgba(255,255,255,.1);
 }
-.item{font-size:10px;color:var(--muted);text-align:center}
-.item.active{color:var(--blue)}
+
+.nav-item{
+text-align:center;
+font-size:10px;
+color:var(--muted);
+}
+.nav-item.active{color:var(--blue)}
 .icon{font-size:18px}
 </style>
 </head>
@@ -119,117 +134,74 @@ border-top:1px solid rgba(255,255,255,.1)
 <div id="home" class="tab active">
 <div class="card">
 <div class="row">
-<h2 id="name">Trader</h2>
+<h2 id="username">Trader</h2>
 <span class="badge">FREE</span>
 </div>
-<p>Whale tracking for awareness. PRO for execution edge.</p>
-
-<div style="margin-top:10px">
-<div class="row" style="font-size:11px;color:var(--muted)">
-<span>PRO Unlock</span><span>3 / 5 referrals</span>
-</div>
-<div class="progress"><div class="fill"></div></div>
-</div>
+<p>Whale activity for awareness. PRO for precision.</p>
 </div>
 
 <div class="card">
-<h2>🎁 Earn PRO Free</h2>
+<h2>🎁 Unlock PRO Free</h2>
 <p>Invite <b>5 friends</b> → Get <b>30 days PRO</b></p>
-<button class="btn gray" onclick="copyRef()">Copy Referral Link</button>
+<button class="btn gray" onclick="copyReferral()">Copy Referral Link</button>
 </div>
 </div>
 
 <!-- SIGNALS -->
 <div id="signals" class="tab">
-  <div class="card">
-    <h2>📡 Live Whale Signals</h2>
+<div class="card">
+<h2>📡 Live Signals</h2>
 
-    <!-- SIGNAL 1 -->
-    <div class="signal" onclick="toggle(this)">
-      <div class="row">
-        <b>BTC / USDT</b>
-        <span class="tag long">LONG</span>
-      </div>
-      <p>🐳 Whale Buy • Binance Futures</p>
+<!-- BTC -->
+<div class="signal" onclick="toggle(this)">
+<div class="row">
+<b>BTC / USDT</b>
+<span class="long">LONG</span>
+</div>
+<p>🐳 Whale buy detected</p>
 
-      <div class="hidden">
-        <p>Entry: <span class="blur">$66,800</span></p>
-        <p>Target: <span class="blur">$69,420</span></p>
-        <p>Stop Loss: <span class="blur">$65,900</span></p>
+<div class="hidden">
+<p>Entry: <span class="blur">$66,800</span></p>
+<p>Target: <span class="blur">$69,420</span></p>
+<p>SL: <span class="blur">$65,900</span></p>
 
-        <!-- ACTION BUTTONS -->
-        <div style="display:flex; gap:8px; margin-top:10px;">
-          <a class="btn binance" 
-             href="https://www.binance.com/en/futures/BTCUSDT?ref=YOUR_CODE"
-             onclick="event.stopPropagation()">
-             Trade Binance
-          </a>
-
-          <a class="btn bybit"
-             href="https://www.bybit.com/trade/usdt/BTCUSDT?affiliate_id=YOUR_CODE"
-             onclick="event.stopPropagation()">
-             Trade Bybit
-          </a>
-        </div>
-
-        <p style="font-size:11px;color:var(--blue);margin-top:6px;">
-          🔒 Unlock PRO to see exact levels
-        </p>
-      </div>
-    </div>
-
-    <!-- SIGNAL 2 -->
-    <div class="signal" onclick="toggle(this)">
-      <div class="row">
-        <b>ETH / USDT</b>
-        <span class="tag">ACCUM</span>
-      </div>
-      <p>Smart Money Inflow</p>
-
-      <div class="hidden">
-        <p>Zone: <span class="blur">$3,850 – $3,780</span></p>
-
-        <div style="display:flex; gap:8px; margin-top:10px;">
-          <a class="btn binance"
-             href="https://www.binance.com/en/futures/ETHUSDT?ref=YOUR_CODE"
-             onclick="event.stopPropagation()">
-             Trade Binance
-          </a>
-
-          <a class="btn bybit"
-             href="https://www.bybit.com/trade/usdt/ETHUSDT?affiliate_id=YOUR_CODE"
-             onclick="event.stopPropagation()">
-             Trade Bybit
-          </a>
-        </div>
-
-        <p style="font-size:11px;color:var(--blue);margin-top:6px;">
-          🔒 PRO required for precise zone
-        </p>
-      </div>
-    </div>
-
-    <p style="font-size:11px;color:var(--red)">
-      🔔 Free users: 1 alert/day • PRO: Unlimited
-    </p>
-
-  </div>
+<div style="display:flex;gap:8px">
+<a class="btn binance" href="https://www.binance.com/en/futures/BTCUSDT?ref=YOUR_CODE"
+onclick="event.stopPropagation()">Binance</a>
+<a class="btn bybit" href="https://www.bybit.com/trade/usdt/BTCUSDT?affiliate_id=YOUR_CODE"
+onclick="event.stopPropagation()">Bybit</a>
 </div>
 
+<p style="font-size:11px;color:var(--blue)">🔒 PRO for exact levels</p>
+</div>
+</div>
 
-<!-- TRADE -->
-<div id="trade" class="tab">
-<div class="card" style="text-align:center">
-<h2>⚡ Trade Instantly</h2>
-<p>Best liquidity + fee discounts</p>
+<!-- ETH -->
+<div class="signal" onclick="toggle(this)">
+<div class="row">
+<b>ETH / USDT</b>
+<span>ACCUM</span>
+</div>
+<p>Smart money inflow</p>
 
-<a class="btn binance" href="https://www.binance.com/en/futures?ref=YOUR_CODE">
-Trade on Binance
-</a>
+<div class="hidden">
+<p>Zone: <span class="blur">$3,850 – $3,780</span></p>
 
-<a class="btn bybit" href="https://www.bybit.com/register?affiliate_id=YOUR_CODE">
-Trade on Bybit
-</a>
+<div style="display:flex;gap:8px">
+<a class="btn binance" href="https://www.binance.com/en/futures/ETHUSDT?ref=YOUR_CODE"
+onclick="event.stopPropagation()">Binance</a>
+<a class="btn bybit" href="https://www.bybit.com/trade/usdt/ETHUSDT?affiliate_id=YOUR_CODE"
+onclick="event.stopPropagation()">Bybit</a>
+</div>
+
+<p style="font-size:11px;color:var(--blue)">🔒 PRO required</p>
+</div>
+</div>
+
+<p style="font-size:11px;color:var(--red)">
+Free users: 1 alert/day • PRO: Unlimited
+</p>
+
 </div>
 </div>
 
@@ -253,16 +225,13 @@ Trade on Bybit
 
 <!-- NAV -->
 <div class="nav">
-<div class="item active" onclick="openTab('home',this)">
+<div class="nav-item active" onclick="openTab('home',this)">
 <div class="icon">🏠</div>Home
 </div>
-<div class="item" onclick="openTab('signals',this)">
+<div class="nav-item" onclick="openTab('signals',this)">
 <div class="icon">📡</div>Signals
 </div>
-<div class="item" onclick="openTab('trade',this)">
-<div class="icon">💸</div>Trade
-</div>
-<div class="item" onclick="openTab('profile',this)">
+<div class="nav-item" onclick="openTab('profile',this)">
 <div class="icon">👤</div>Profile
 </div>
 </div>
@@ -271,16 +240,16 @@ Trade on Bybit
 const tg = window.Telegram.WebApp;
 tg.expand();
 
-const u = tg.initDataUnsafe?.user;
-if(u){
-document.getElementById("name").innerText = u.first_name;
-document.getElementById("uid").innerText = u.id;
+const user = tg.initDataUnsafe?.user;
+if(user){
+document.getElementById("username").innerText = user.first_name;
+document.getElementById("uid").innerText = user.id;
 }
 
 function openTab(id,el){
 document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
 document.getElementById(id).classList.add("active");
-document.querySelectorAll(".item").forEach(i=>i.classList.remove("active"));
+document.querySelectorAll(".nav-item").forEach(i=>i.classList.remove("active"));
 el.classList.add("active");
 tg.HapticFeedback?.impactOccurred("light");
 }
@@ -290,8 +259,8 @@ card.classList.toggle("open");
 tg.HapticFeedback?.impactOccurred("medium");
 }
 
-function copyRef(){
-const ref = `https://t.me/YOUR_BOT?start=${u?.id || "ref"}`;
+function copyReferral(){
+const ref=`https://t.me/YOUR_BOT?start=${user?.id||"ref"}`;
 navigator.clipboard.writeText(ref);
 tg.showPopup({message:"Referral link copied"});
 }
