--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <style>
 :root{
 --bg:#0f172a;
---card:rgba(30,41,59,.78);
---nav:rgba(15,23,42,.95);
+--card:rgba(30,41,59,.85);
+--nav:rgba(15,23,42,.98);
 --blue:#3b82f6;
---green:#10b981;
+--green:#22c55e;
 --red:#f87171;
+--purple:#a855f7;
+--gold:#facc15;
 --text:#f8fafc;
 --muted:#94a3b8;
 }
@@ -26,26 +28,26 @@ font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
 background:radial-gradient(circle at top,#1e293b,#0f172a 70%);
 color:var(--text);
 padding-bottom:78px;
--webkit-user-select:none;
 user-select:none;
 }
 
 .app{
-max-width:500px;
+max-width:520px;
 margin:auto;
 padding:14px;
 }
 
 /* Cards */
 .card{
-background:var(--card);
-border-radius:16px;
+background:linear-gradient(145deg,#1e293b,#0b1220);
+border-radius:18px;
 padding:16px;
 margin-bottom:14px;
-border:1px solid rgba(255,255,255,.08);
-backdrop-filter:blur(12px);
+border:1px solid rgba(255,255,255,.1);
+box-shadow:0 8px 30px rgba(0,0,0,.35);
 }
 
+/* Headings */
 h2{margin:0 0 6px;font-size:18px}
 p{margin:6px 0;font-size:13px;color:#cbd5e1}
 
@@ -54,55 +56,67 @@ p{margin:6px 0;font-size:13px;color:#cbd5e1}
 .tab.active{display:block;animation:fade .25s}
 @keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1}}
 
-/* Signals */
+/* Signal Cards */
 .signal{
-background:rgba(255,255,255,.04);
-border-radius:14px;
+background:linear-gradient(145deg,#1f2937,#0f172a);
+border-radius:16px;
 padding:14px;
 margin-bottom:12px;
 cursor:pointer;
+border:1px solid rgba(255,255,255,.08);
 }
 .signal.open .hidden{display:block}
 
 .row{display:flex;justify-content:space-between;align-items:center}
 .hidden{display:none;font-size:12px;margin-top:8px}
 
-.long{color:var(--green)}
-.short{color:var(--red)}
+.long{color:var(--green);font-weight:700}
+.short{color:var(--red);font-weight:700}
 
 .blur{
-filter:blur(6px);
+filter:blur(7px);
 opacity:.6;
-padding:2px 6px;
-background:rgba(255,255,255,.1);
-border-radius:4px;
+padding:3px 8px;
+background:rgba(255,255,255,.12);
+border-radius:6px;
 }
 
 /* Buttons */
 .btn{
 display:block;
 width:100%;
-padding:11px;
-border-radius:10px;
+padding:12px;
+border-radius:12px;
 text-align:center;
 font-weight:700;
 text-decoration:none;
 border:none;
 margin-top:8px;
 }
-.binance{background:#F3BA2F;color:#000}
+.binance{background:#f3ba2f;color:#000}
 .bybit{background:#181818;color:#fff;border:1px solid #333}
 .gray{background:#334155;color:#fff}
+
+/* Premium Badge */
+.badge{
+display:inline-block;
+padding:4px 10px;
+border-radius:999px;
+font-size:11px;
+font-weight:700;
+background:linear-gradient(90deg,var(--gold),#f59e0b);
+color:#000;
+}
 
 /* Bottom Nav */
 .nav{
 position:fixed;
 bottom:0;left:0;right:0;
-background:var(--nav);
+background:linear-gradient(180deg,#0f172a,#020617);
 display:flex;
 justify-content:space-around;
 padding:10px 0;
-border-top:1px solid rgba(255,255,255,.1);
+border-top:1px solid rgba(255,255,255,.12);
 }
 
 .nav-item{
@@ -121,10 +135,9 @@ color:var(--muted);
 
 <!-- HOME -->
 <div id="home" class="tab active">
-
 <div class="card">
 <h2 id="username">Trader</h2>
-<p>Whale intelligence for awareness. Precision for PRO users.</p>
+<p>🐳 Whale intelligence for awareness. <span class="badge">PRO</span> for precision.</p>
 </div>
 
 <div class="card">
@@ -132,7 +145,6 @@ color:var(--muted);
 <p>BTC Dominance: <b>52.4%</b></p>
 <p>Funding Rate: <b>Neutral</b></p>
 <p>Fear & Greed: <b>Greed</b></p>
-<p style="font-size:11px;color:var(--muted)">Updates every 30 minutes</p>
 </div>
 
 <div class="card">
@@ -140,85 +152,38 @@ color:var(--muted);
 <p>Invite <b>5 friends</b> → Get <b>30 days PRO</b></p>
 <button class="btn gray" onclick="copyReferral()">Copy Referral Link</button>
 </div>
-
 </div>
 
 <!-- SIGNALS -->
 <div id="signals" class="tab">
-
 <div class="card">
-<h2>📈 Signal Performance</h2>
-<p>Last 7 days:</p>
-<p>✔️ Wins: 8 | ❌ Losses: 2</p>
-<p>🎯 Accuracy: <b>80%</b></p>
-<p style="font-size:11px;color:var(--muted)">Demo stats • Live tracking soon</p>
-</div>
+<h2>📈 Live Signals <span class="badge">PRO</span></h2>
 
-<div class="card">
-<h2>📡 Live Signals</h2>
-
-<!-- BTC -->
 <div class="signal" onclick="toggle(this)">
 <div class="row">
 <b>BTC / USDT</b>
 <span class="long">LONG</span>
 </div>
-<p>🐳 Whale buy detected (Binance)</p>
+<p>🐳 Whale buy detected</p>
 
 <div class="hidden">
 <p>Entry: <span class="blur">$66,800</span></p>
 <p>Target: <span class="blur">$69,420</span></p>
 <p>SL: <span class="blur">$65,900</span></p>
 
-<p style="font-size:11px;color:#94a3b8">Why this signal?</p>
-<ul style="font-size:11px;color:#cbd5e1;margin-left:14px">
-<li>Large wallet inflow</li>
-<li>Open interest rising</li>
-<li>Price holding VWAP</li>
-</ul>
-
-<div style="display:flex;gap:8px">
-<a class="btn binance"
-href="https://www.binance.com/en/futures/BTCUSDT?ref=YOUR_CODE"
-onclick="event.stopPropagation()">Binance</a>
-
-<a class="btn bybit"
-href="https://www.bybit.com/trade/usdt/BTCUSDT?affiliate_id=YOUR_CODE"
-onclick="event.stopPropagation()">Bybit</a>
-</div>
-
 <p style="font-size:11px;color:var(--blue)">🔒 PRO for exact levels</p>
 </div>
 </div>
 
-<!-- ETH -->
 <div class="signal" onclick="toggle(this)">
 <div class="row">
 <b>ETH / USDT</b>
-<span>ACCUM</span>
+<span class="short">ACCUM</span>
 </div>
 <p>Smart money inflow</p>
 
 <div class="hidden">
 <p>Zone: <span class="blur">$3,850 – $3,780</span></p>
-
-<p style="font-size:11px;color:#94a3b8">Why this signal?</p>
-<ul style="font-size:11px;color:#cbd5e1;margin-left:14px">
-<li>Exchange outflows</li>
-<li>Funding reset</li>
-<li>Support defended</li>
-</ul>
-
-<div style="display:flex;gap:8px">
-<a class="btn binance"
-href="https://www.binance.com/en/futures/ETHUSDT?ref=YOUR_CODE"
-onclick="event.stopPropagation()">Binance</a>
-
-<a class="btn bybit"
-href="https://www.bybit.com/trade/usdt/ETHUSDT?affiliate_id=YOUR_CODE"
-onclick="event.stopPropagation()">Bybit</a>
-</div>
-
 <p style="font-size:11px;color:var(--blue)">🔒 PRO required</p>
 </div>
 </div>
@@ -226,30 +191,16 @@ onclick="event.stopPropagation()">Bybit</a>
 <p style="font-size:11px;color:var(--red)">
 Free users: 1 alert/day • PRO: Unlimited
 </p>
-
 </div>
-
-<div class="card">
-<h2>📚 Learn</h2>
-<p><b>Whale Buy:</b> Large wallet accumulation often precedes volatility.</p>
-<p style="font-size:11px;color:var(--muted)">PRO users get deeper breakdowns</p>
-</div>
-
 </div>
 
 <!-- ROADMAP -->
 <div id="roadmap" class="tab">
 <div class="card">
-<h2>🛣️ Product Roadmap</h2>
-
-<p>✅ <b>Phase 1 – Launch</b></p>
-<p style="color:var(--muted)">Whale alerts • Trade buttons • Referrals</p>
-
-<p>🟡 <b>Phase 2 – PRO Access</b></p>
-<p style="color:var(--muted)">Exact levels • Unlimited alerts • Paid plans</p>
-
-<p>🔵 <b>Phase 3 – Expansion</b></p>
-<p style="color:var(--muted)">More coins • Smart money analytics • Rewards</p>
+<h2>🛣️ Roadmap</h2>
+<p>✅ Launch</p>
+<p>🟡 PRO Access</p>
+<p>🔵 Expansion</p>
 </div>
 </div>
 
@@ -258,7 +209,7 @@ Free users: 1 alert/day • PRO: Unlimited
 <div class="card">
 <h2>⚙️ Account</h2>
 <p>User ID: <span id="uid">—</span></p>
-<button class="btn gray">Contact Support</button>
+<button class="btn gray">Support</button>
 </div>
 </div>
 
@@ -290,21 +241,38 @@ document.getElementById("username").innerText = user.first_name;
 document.getElementById("uid").innerText = user.id;
 }
 
-function openTab(id,el){
+async function checkPremium(uid){
+    const res = await fetch("http://127.0.0.1:5000/user/status",{
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
+        body:JSON.stringify({ uid })
+    });
+    const data = await res.json();
+    return data.premium === true;
+}
+
+async function openTab(id,el){
+if(id==="signals"){
+    const premium = await checkPremium(user.id);
+    if(!premium){
+        tg.showPopup({
+            title:"🔒 PRO Required",
+            message:"Live signals are available for PRO users only.\n\nInvite 5 friends or upgrade.",
+            buttons:[{type:"ok"}]
+        });
+        return;
+    }
+}
 document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
 document.getElementById(id).classList.add("active");
 document.querySelectorAll(".nav-item").forEach(i=>i.classList.remove("active"));
 el.classList.add("active");
-tg.HapticFeedback?.impactOccurred("light");
 }
 
-function toggle(card){
-card.classList.toggle("open");
-tg.HapticFeedback?.impactOccurred("medium");
-}
+function toggle(card){card.classList.toggle("open");}
 
 function copyReferral(){
-const ref=`https://t.me/YOUR_BOT?start=${user?.id||"ref"}`;
+const ref=`https://t.me/YOUR_BOT?start=${user.id}`;
 navigator.clipboard.writeText(ref);
 tg.showPopup({message:"Referral link copied"});
 }
