--- a/index.html
+++ b/index.html
@@ -2,130 +2,91 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <title>Whale Intel</title>
 
 <style>
 :root{
 --bg:#0f172a;
---card:rgba(30,41,59,.85);
---nav:rgba(15,23,42,.98);
+--card:#111827;
 --blue:#3b82f6;
 --green:#22c55e;
---red:#f87171;
---purple:#a855f7;
+--red:#ef4444;
 --gold:#facc15;
 --text:#f8fafc;
 --muted:#94a3b8;
 }
 
-*{box-sizing:border-box}
-
 body{
 margin:0;
-font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
-background:radial-gradient(circle at top,#1e293b,#0f172a 70%);
+font-family:system-ui;
+background:linear-gradient(180deg,#020617,#0f172a);
 color:var(--text);
-padding-bottom:78px;
-user-select:none;
+padding-bottom:80px;
 }
 
-.app{
-max-width:520px;
-margin:auto;
-padding:14px;
-}
+.app{max-width:520px;margin:auto;padding:14px}
 
-/* Cards */
 .card{
-background:linear-gradient(145deg,#1e293b,#0b1220);
+background:linear-gradient(145deg,#020617,#111827);
 border-radius:18px;
 padding:16px;
 margin-bottom:14px;
 border:1px solid rgba(255,255,255,.1);
-box-shadow:0 8px 30px rgba(0,0,0,.35);
 }
 
-/* Headings */
 h2{margin:0 0 6px;font-size:18px}
 p{margin:6px 0;font-size:13px;color:#cbd5e1}
 
-/* Tabs */
 .tab{display:none}
-.tab.active{display:block;animation:fade .25s}
-@keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1}}
+.tab.active{display:block}
 
-/* Signal Cards */
 .signal{
-background:linear-gradient(145deg,#1f2937,#0f172a);
-border-radius:16px;
+background:#020617;
+border-radius:14px;
 padding:14px;
 margin-bottom:12px;
-cursor:pointer;
 border:1px solid rgba(255,255,255,.08);
 }
+
+.signal .hidden{display:none}
 .signal.open .hidden{display:block}
 
-.row{display:flex;justify-content:space-between;align-items:center}
-.hidden{display:none;font-size:12px;margin-top:8px}
-
-.long{color:var(--green);font-weight:700}
-.short{color:var(--red);font-weight:700}
-
 .blur{
-filter:blur(7px);
+filter:blur(6px);
 opacity:.6;
-padding:3px 8px;
+padding:2px 6px;
 background:rgba(255,255,255,.12);
 border-radius:6px;
 }
 
-/* Buttons */
-.btn{
-display:block;
-width:100%;
-padding:12px;
-border-radius:12px;
-text-align:center;
-font-weight:700;
-text-decoration:none;
-border:none;
-margin-top:8px;
-}
-.binance{background:#f3ba2f;color:#000}
-.bybit{background:#181818;color:#fff;border:1px solid #333}
-.gray{background:#334155;color:#fff}
-
-/* Premium Badge */
 .badge{
-display:inline-block;
-padding:4px 10px;
-border-radius:999px;
-font-size:11px;
-font-weight:700;
-background:linear-gradient(90deg,var(--gold),#f59e0b);
+background:linear-gradient(90deg,#facc15,#f59e0b);
 color:#000;
+font-size:11px;
+padding:3px 8px;
+border-radius:999px;
+font-weight:700;
 }
 
-/* Bottom Nav */
 .nav{
 position:fixed;
 bottom:0;left:0;right:0;
-background:linear-gradient(180deg,#0f172a,#020617);
 display:flex;
 justify-content:space-around;
+background:#020617;
 padding:10px 0;
-border-top:1px solid rgba(255,255,255,.12);
+border-top:1px solid rgba(255,255,255,.1);
 }
 
 .nav-item{
-text-align:center;
-font-size:10px;
+font-size:11px;
 color:var(--muted);
+text-align:center;
 }
+
 .nav-item.active{color:var(--blue)}
-.icon{font-size:18px}
 </style>
 </head>
 
@@ -137,79 +98,31 @@ color:var(--muted);
 <div id="home" class="tab active">
 <div class="card">
 <h2 id="username">Trader</h2>
-<p>🐳 Whale intelligence for awareness. <span class="badge">PRO</span> for precision.</p>
+<p>User ID: <span id="uid">—</span></p>
 </div>
 
 <div class="card">
-<h2>🌍 Market Snapshot</h2>
-<p>BTC Dominance: <b>52.4%</b></p>
-<p>Funding Rate: <b>Neutral</b></p>
-<p>Fear & Greed: <b>Greed</b></p>
-</div>
-
-<div class="card">
-<h2>🎁 Unlock PRO Free</h2>
-<p>Invite <b>5 friends</b> → Get <b>30 days PRO</b></p>
-<button class="btn gray" onclick="copyReferral()">Copy Referral Link</button>
+<h2>🎁 Referrals</h2>
+<p><b id="refCount">0</b> / 5 completed</p>
+<p>Invite friends → unlock PRO</p>
 </div>
 </div>
 
 <!-- SIGNALS -->
 <div id="signals" class="tab">
 <div class="card">
-<h2>📈 Live Signals <span class="badge">PRO</span></h2>
+<h2>📡 Signals <span class="badge">PRO</span></h2>
 
 <div class="signal" onclick="toggle(this)">
-<div class="row">
 <b>BTC / USDT</b>
-<span class="long">LONG</span>
-</div>
-<p>🐳 Whale buy detected</p>
-
+<p>Whale activity detected</p>
 <div class="hidden">
 <p>Entry: <span class="blur">$66,800</span></p>
-<p>Target: <span class="blur">$69,420</span></p>
-<p>SL: <span class="blur">$65,900</span></p>
-
-<p style="font-size:11px;color:var(--blue)">🔒 PRO for exact levels</p>
+<p>Target: <span class="blur">$69,400</span></p>
+<p style="color:var(--gold)">🔒 PRO required</p>
 </div>
 </div>
 
-<div class="signal" onclick="toggle(this)">
-<div class="row">
-<b>ETH / USDT</b>
-<span class="short">ACCUM</span>
-</div>
-<p>Smart money inflow</p>
-
-<div class="hidden">
-<p>Zone: <span class="blur">$3,850 – $3,780</span></p>
-<p style="font-size:11px;color:var(--blue)">🔒 PRO required</p>
-</div>
-</div>
-
-<p style="font-size:11px;color:var(--red)">
-Free users: 1 alert/day • PRO: Unlimited
-</p>
-</div>
-</div>
-
-<!-- ROADMAP -->
-<div id="roadmap" class="tab">
-<div class="card">
-<h2>🛣️ Roadmap</h2>
-<p>✅ Launch</p>
-<p>🟡 PRO Access</p>
-<p>🔵 Expansion</p>
-</div>
-</div>
-
-<!-- PROFILE -->
-<div id="profile" class="tab">
-<div class="card">
-<h2>⚙️ Account</h2>
-<p>User ID: <span id="uid">—</span></p>
-<button class="btn gray">Support</button>
 </div>
 </div>
 
@@ -217,65 +130,61 @@ Free users: 1 alert/day • PRO: Unlimited
 
 <!-- NAV -->
 <div class="nav">
-<div class="nav-item active" onclick="openTab('home',this)">
-<div class="icon">🏠</div>Home
-</div>
-<div class="nav-item" onclick="openTab('signals',this)">
-<div class="icon">📡</div>Signals
-</div>
-<div class="nav-item" onclick="openTab('roadmap',this)">
-<div class="icon">🛣️</div>Roadmap
-</div>
-<div class="nav-item" onclick="openTab('profile',this)">
-<div class="icon">👤</div>Profile
-</div>
+<div class="nav-item active" onclick="openTab('home',this)">🏠<br>Home</div>
+<div class="nav-item" onclick="openTab('signals',this)">📡<br>Signals</div>
 </div>
 
 <script>
 const tg = window.Telegram.WebApp;
 tg.expand();
+tg.ready();
 
-const user = tg.initDataUnsafe?.user;
+let user = tg.initDataUnsafe?.user || null;
+let isPremium = false;
+
 if(user){
 document.getElementById("username").innerText = user.first_name;
 document.getElementById("uid").innerText = user.id;
+loadReferralStats();
+checkPremium();
 }
 
-async function checkPremium(uid){
-    const res = await fetch("http://127.0.0.1:5000/user/status",{
-        method:"POST",
-        headers:{ "Content-Type":"application/json" },
-        body:JSON.stringify({ uid })
-    });
-    const data = await res.json();
-    return data.premium === true;
+async function checkPremium(){
+const r = await fetch("http://127.0.0.1:5000/user/status",{
+method:"POST",
+headers:{"Content-Type":"application/json"},
+body:JSON.stringify({uid:user.id})
+});
+const d = await r.json();
+isPremium = d.premium;
 }
 
-async function openTab(id,el){
-if(id==="signals"){
-    const premium = await checkPremium(user.id);
-    if(!premium){
-        tg.showPopup({
-            title:"🔒 PRO Required",
-            message:"Live signals are available for PRO users only.\n\nInvite 5 friends or upgrade.",
-            buttons:[{type:"ok"}]
-        });
-        return;
-    }
+async function loadReferralStats(){
+const r = await fetch("http://127.0.0.1:5000/user/referrals",{
+method:"POST",
+headers:{"Content-Type":"application/json"},
+body:JSON.stringify({uid:user.id})
+});
+const d = await r.json();
+document.getElementById("refCount").innerText = d.referrals;
 }
+
+function openTab(id,el){
 document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
 document.getElementById(id).classList.add("active");
-document.querySelectorAll(".nav-item").forEach(i=>i.classList.remove("active"));
+document.querySelectorAll(".nav-item").forEach(n=>n.classList.remove("active"));
 el.classList.add("active");
+
+if(id==="signals" && !isPremium){
+tg.showPopup({
+title:"🔒 PRO Required",
+message:"Invite 5 friends or upgrade to unlock signals",
+buttons:[{type:"ok"}]
+});
+}
 }
 
-function toggle(card){card.classList.toggle("open");}
-
-function copyReferral(){
-const ref=`https://t.me/YOUR_BOT?start=${user.id}`;
-navigator.clipboard.writeText(ref);
-tg.showPopup({message:"Referral link copied"});
-}
+function toggle(el){el.classList.toggle("open")}
 </script>
 
 </body>
