--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <title>Whale Intel</title>
 
 <style>
 :root{
 --bg:#0f172a;
---card:#111827;
+--card:rgba(30,41,59,.85);
+--nav:rgba(15,23,42,.95);
 --blue:#3b82f6;
 --green:#22c55e;
 --red:#ef4444;
@@ -18,40 +19,49 @@
 --muted:#94a3b8;
 }
 
+*{box-sizing:border-box}
+
 body{
 margin:0;
-font-family:system-ui;
-background:linear-gradient(180deg,#020617,#0f172a);
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
+background:radial-gradient(circle at top,#1e293b,#0f172a 70%);
 color:var(--text);
-padding-bottom:80px;
+padding-bottom:78px;
+user-select:none;
 }
 
 .app{max-width:520px;margin:auto;padding:14px}
 
+/* Cards */
 .card{
 background:linear-gradient(145deg,#020617,#111827);
 border-radius:18px;
 padding:16px;
 margin-bottom:14px;
 border:1px solid rgba(255,255,255,.1);
+box-shadow:0 8px 30px rgba(0,0,0,.35);
 }
 
 h2{margin:0 0 6px;font-size:18px}
 p{margin:6px 0;font-size:13px;color:#cbd5e1}
 
+/* Tabs */
 .tab{display:none}
-.tab.active{display:block}
+.tab.active{display:block;animation:fade .25s}
+@keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1}}
 
+/* Signals */
 .signal{
-background:#020617;
+background:rgba(255,255,255,.04);
 border-radius:14px;
 padding:14px;
 margin-bottom:12px;
+cursor:pointer;
 border:1px solid rgba(255,255,255,.08);
 }
-
-.signal .hidden{display:none}
 .signal.open .hidden{display:block}
+
+.hidden{display:none;font-size:12px;margin-top:8px}
 
 .blur{
 filter:blur(6px);
@@ -62,31 +72,48 @@ border-radius:6px;
 }
 
 .badge{
-background:linear-gradient(90deg,#facc15,#f59e0b);
-color:#000;
-font-size:11px;
-padding:3px 8px;
+display:inline-block;
+padding:4px 10px;
 border-radius:999px;
+font-size:11px;
 font-weight:700;
+background:linear-gradient(90deg,var(--gold),#f59e0b);
+color:#000;
 }
 
+/* Buttons */
+.btn{
+display:block;
+width:100%;
+padding:10px;
+border-radius:10px;
+text-align:center;
+font-weight:700;
+text-decoration:none;
+border:none;
+margin-top:8px;
+}
+.binance{background:#f3ba2f;color:#000}
+.bybit{background:#181818;color:#fff;border:1px solid #333}
+
+/* Nav */
 .nav{
 position:fixed;
 bottom:0;left:0;right:0;
+background:var(--nav);
 display:flex;
 justify-content:space-around;
-background:#020617;
 padding:10px 0;
 border-top:1px solid rgba(255,255,255,.1);
 }
 
 .nav-item{
-font-size:11px;
-color:var(--muted);
 text-align:center;
+font-size:10px;
+color:var(--muted);
 }
-
 .nav-item.active{color:var(--blue)}
+.icon{font-size:18px}
 </style>
 </head>
 
@@ -104,25 +131,70 @@ text-align:center;
 <div class="card">
 <h2>🎁 Referrals</h2>
 <p><b id="refCount">0</b> / 5 completed</p>
-<p>Invite friends → unlock PRO</p>
+<p>Invite friends → unlock <span class="badge">PRO</span></p>
 </div>
 </div>
 
 <!-- SIGNALS -->
 <div id="signals" class="tab">
 <div class="card">
-<h2>📡 Signals <span class="badge">PRO</span></h2>
+<h2>📡 Live Signals <span class="badge">PRO</span></h2>
 
 <div class="signal" onclick="toggle(this)">
 <b>BTC / USDT</b>
-<p>Whale activity detected</p>
+<p>🐳 Whale buy detected (Binance)</p>
+
 <div class="hidden">
 <p>Entry: <span class="blur">$66,800</span></p>
-<p>Target: <span class="blur">$69,400</span></p>
-<p style="color:var(--gold)">🔒 PRO required</p>
+<p>Target: <span class="blur">$69,420</span></p>
+<p>Stop Loss: <span class="blur">$65,900</span></p>
+
+<p style="font-size:11px;color:var(--gold)">
+🔒 Exact levels unlocked for PRO users
+</p>
+
+<!-- EXCHANGE BUTTONS (ALWAYS CLICKABLE) -->
+<div style="display:flex;gap:8px">
+<a class="btn binance"
+   href="https://www.binance.com/en/futures/BTCUSDT?ref=YOUR_CODE"
+   target="_blank"
+   onclick="event.stopPropagation()">
+   Binance
+</a>
+
+<a class="btn bybit"
+   href="https://www.bybit.com/trade/usdt/BTCUSDT?affiliate_id=YOUR_CODE"
+   target="_blank"
+   onclick="event.stopPropagation()">
+   Bybit
+</a>
+</div>
+
 </div>
 </div>
 
+<p style="font-size:11px;color:var(--red)">
+Free users: Preview only • PRO users: Full precision
+</p>
+</div>
+</div>
+
+<!-- ROADMAP -->
+<div id="roadmap" class="tab">
+<div class="card">
+<h2>🛣️ Product Roadmap</h2>
+<p>✅ Launch</p>
+<p>🟡 PRO Access</p>
+<p>🔵 Expansion</p>
+</div>
+</div>
+
+<!-- PROFILE -->
+<div id="profile" class="tab">
+<div class="card">
+<h2>⚙️ Account</h2>
+<p>User ID: <span id="uid2">—</span></p>
+<button class="badge">Contact Support</button>
 </div>
 </div>
 
@@ -130,8 +202,18 @@ text-align:center;
 
 <!-- NAV -->
 <div class="nav">
-<div class="nav-item active" onclick="openTab('home',this)">🏠<br>Home</div>
-<div class="nav-item" onclick="openTab('signals',this)">📡<br>Signals</div>
+<div class="nav-item active" onclick="openTab('home',this)">
+<div class="icon">🏠</div>Home
+</div>
+<div class="nav-item" onclick="openTab('signals',this)">
+<div class="icon">📡</div>Signals
+</div>
+<div class="nav-item" onclick="openTab('roadmap',this)">
+<div class="icon">🛣️</div>Roadmap
+</div>
+<div class="nav-item" onclick="openTab('profile',this)">
+<div class="icon">👤</div>Profile
+</div>
 </div>
 
 <script>
@@ -140,23 +222,12 @@ tg.expand();
 tg.ready();
 
 let user = tg.initDataUnsafe?.user || null;
-let isPremium = false;
 
 if(user){
 document.getElementById("username").innerText = user.first_name;
 document.getElementById("uid").innerText = user.id;
+document.getElementById("uid2").innerText = user.id;
 loadReferralStats();
-checkPremium();
-}
-
-async function checkPremium(){
-const r = await fetch("http://127.0.0.1:5000/user/status",{
-method:"POST",
-headers:{"Content-Type":"application/json"},
-body:JSON.stringify({uid:user.id})
-});
-const d = await r.json();
-isPremium = d.premium;
 }
 
 async function loadReferralStats(){
@@ -172,19 +243,11 @@ document.getElementById("refCount").innerText = d.referrals;
 function openTab(id,el){
 document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
 document.getElementById(id).classList.add("active");
-document.querySelectorAll(".nav-item").forEach(n=>n.classList.remove("active"));
+document.querySelectorAll(".nav-item").forEach(i=>i.classList.remove("active"));
 el.classList.add("active");
-
-if(id==="signals" && !isPremium){
-tg.showPopup({
-title:"🔒 PRO Required",
-message:"Invite 5 friends or upgrade to unlock signals",
-buttons:[{type:"ok"}]
-});
-}
 }
 
-function toggle(el){el.classList.toggle("open")}
+function toggle(card){card.classList.toggle("open")}
 </script>
 
 </body>
