--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Free users: Preview only • PRO users: Full precision
 <!-- UPGRADE -->
 <div id="upgrade" class="tab">
   <div class="card">
-    <h2>⭐ Upgrade to PRO</h2>
+   <h2>⭐ Upgrade to PRO <span class="badge">LAUNCH OFFER</span></h2>
     <p>Unlock full whale intelligence and precision signals.</p>
 
     <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
@@ -209,7 +209,21 @@ Free users: Preview only • PRO users: Full precision
     <div class="card" style="margin-top:12px">
       <h2 style="color:#facc15">💎 PRO Plan</h2>
       <p><b>30 Days Access</b></p>
-      <p style="font-size:18px;font-weight:800">⭐ 299 Stars</p>
+      <p><b>30 Days Access</b></p>
+      <p><b>30 Days PRO Access</b></p>
+      <p style="font-size:13px;color:#94a3b8;text-decoration:line-through">
+      ₹799 / month
+      </p>
+
+      <p style="font-size:20px;font-weight:900;color:#facc15">
+      ⭐ 399 Stars <span style="font-size:11px;color:#cbd5e1">(Launch Offer)</span>
+      </p>
+
+      <p style="font-size:11px;color:#94a3b8;margin-top:4px">
+       Early adopter pricing • Limited-time
+      </p>
+
+
 
       <button class="btn" style="
         background:linear-gradient(90deg,#facc15,#f59e0b);
