--- a/index.html
+++ b/index.html
@@ -195,25 +195,94 @@ Free users: Preview only • PRO users: Full precision
 
 <!-- UPGRADE -->
 <div id="upgrade" class="tab">
-<div class="card">
-<h2>⭐ Upgrade to PRO <span class="badge">LAUNCH OFFER</span></h2>
+<!-- UPGRADE -->
+<div id="upgrade" class="tab">
+  <div class="card">
 
-<p style="text-decoration:line-through;color:#94a3b8">₹799 / month</p>
+    <h2>⭐ Upgrade to PRO <span class="badge">LAUNCH OFFER</span></h2>
+    <p>Designed for traders who want precision, not guesses.</p>
 
-<p style="font-size:20px;font-weight:900;color:#facc15">
-⭐ 399 Stars <span style="font-size:11px;color:#cbd5e1">(Launch Offer)</span>
-</p>
+    <!-- FREE -->
+    <div class="card" style="margin-top:12px;border:1px solid rgba(255,255,255,.08)">
+      <h3 style="margin:0 0 6px;font-size:15px">🆓 Free Version</h3>
+      <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
+        <li>Preview of whale signals</li>
+        <li>Blurred entry / target / SL</li>
+        <li>Limited alerts</li>
+        <li>Delayed updates</li>
+        <li>Basic market awareness</li>
+      </ul>
+    </div>
 
-<button class="btn"
-onclick="event.stopPropagation(); startPayment();"
-style="background:linear-gradient(90deg,#facc15,#f59e0b);color:#000;font-weight:900">
-🚀 Upgrade with Telegram Stars
-</button>
+    <!-- PRO -->
+    <div class="card" style="margin-top:12px;border:1px solid rgba(250,204,21,.35)">
+      <h3 style="margin:0 0 6px;font-size:15px;color:#facc15">⭐ PRO Version</h3>
+      <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
+        <li><b>Exact entry, target & stop-loss</b></li>
+        <li><b>Unlimited live signals</b></li>
+        <li><b>Real-time updates (no delay)</b></li>
+        <li><b>Priority whale alerts</b></li>
+        <li><b>Higher confidence trade setups</b></li>
+        <li><b>PRO badge on profile</b></li>
+      </ul>
+    </div>
 
-<p style="font-size:11px;color:#94a3b8;margin-top:6px">
-Secure payment via Telegram
-</p>
+    <!-- COMPARISON -->
+    <div class="card" style="margin-top:12px">
+      <h3 style="margin:0 0 8px;font-size:15px">📊 Free vs PRO</h3>
+
+      <table style="width:100%;font-size:12px;border-collapse:collapse">
+        <tr>
+          <td>Signal visibility</td>
+          <td style="color:#94a3b8">Preview</td>
+          <td style="color:#facc15"><b>Full</b></td>
+        </tr>
+        <tr>
+          <td>Entry / SL / TP</td>
+          <td style="color:#94a3b8">Blurred</td>
+          <td style="color:#facc15"><b>Exact</b></td>
+        </tr>
+        <tr>
+          <td>Alerts per day</td>
+          <td style="color:#94a3b8">Limited</td>
+          <td style="color:#facc15"><b>Unlimited</b></td>
+        </tr>
+        <tr>
+          <td>Update speed</td>
+          <td style="color:#94a3b8">Delayed</td>
+          <td style="color:#facc15"><b>Real-time</b></td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- PRICING -->
+    <div class="card" style="margin-top:12px">
+      <p style="font-size:13px;color:#94a3b8;text-decoration:line-through">
+        ₹799 / month
+      </p>
+
+      <p style="font-size:22px;font-weight:900;color:#facc15">
+        ⭐ 399 Stars <span style="font-size:11px;color:#cbd5e1">(Launch Offer)</span>
+      </p>
+
+      <p style="font-size:11px;color:#94a3b8">
+        Early adopter pricing • Limited-time
+      </p>
+
+      <button class="btn"
+        onclick="event.stopPropagation(); startPayment();"
+        style="background:linear-gradient(90deg,#facc15,#f59e0b);color:#000;font-weight:900">
+        🚀 Upgrade to PRO
+      </button>
+
+      <p style="font-size:11px;color:#94a3b8;margin-top:6px">
+        Secure payment via Telegram Stars
+      </p>
+    </div>
+
+  </div>
 </div>
+
 </div>
 
 <!-- ROADMAP -->
