--- a/index.html
+++ b/index.html
@@ -195,22 +195,59 @@ Free users: Preview only • PRO users: Full precision
 
 <!-- UPGRADE -->
 <div id="upgrade" class="tab">
-  <div class="card">
 
+  <div class="card">
     <h2>⭐ Upgrade to PRO <span class="badge">LAUNCH OFFER</span></h2>
     <p>Designed for traders who want precision, not guesses.</p>
+  </div>
 
-    <!-- FREE -->
-    <div class="card" style="margin-top:12px;border:1px solid rgba(255,255,255,.08)">
-      <h3 style="margin:0 0 6px;font-size:15px">🆓 Free Version</h3>
-      <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
-        <li>Preview of whale signals</li>
-        <li>Blurred entry / target / SL</li>
-        <li>Limited alerts</li>
-        <li>Delayed updates</li>
-        <li>Basic market awareness</li>
-      </ul>
-    </div>
+  <!-- FREE -->
+  <div class="card">
+    <h3 style="font-size:15px">🆓 Free Version</h3>
+    <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
+      <li>Preview whale signals</li>
+      <li>Blurred entry / TP / SL</li>
+      <li>Limited alerts</li>
+      <li>Delayed updates</li>
+      <li>Basic market awareness</li>
+    </ul>
+  </div>
+
+  <!-- PRO -->
+  <div class="card" style="border:1px solid rgba(250,204,21,.4)">
+    <h3 style="font-size:15px;color:#facc15">⭐ PRO Version</h3>
+    <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
+      <li><b>Exact entry, target & stop-loss</b></li>
+      <li><b>Unlimited live signals</b></li>
+      <li><b>Real-time updates</b></li>
+      <li><b>Priority whale alerts</b></li>
+      <li><b>PRO badge</b></li>
+    </ul>
+  </div>
+
+  <!-- PRICING -->
+  <div class="card">
+    <p style="font-size:13px;color:#94a3b8;text-decoration:line-through">
+      ₹799 / month
+    </p>
+
+    <p style="font-size:22px;font-weight:900;color:#facc15">
+      ⭐ 399 Stars <span style="font-size:11px">(Launch Offer)</span>
+    </p>
+
+    <button class="btn"
+      onclick="event.stopPropagation(); startPayment();"
+      style="background:linear-gradient(90deg,#facc15,#f59e0b);color:#000;font-weight:900">
+      🚀 Upgrade to PRO
+    </button>
+
+    <p style="font-size:11px;color:#94a3b8;margin-top:6px">
+      Secure payment via Telegram Stars
+    </p>
+  </div>
+
+</div>
+
 
     <!-- PRO -->
     <div class="card" style="margin-top:12px;border:1px solid rgba(250,204,21,.35)">
